--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -141,13 +141,6 @@
     <string name="repo_download_failed">Downloaden %1$s mislukt: %2$s</string>
     <string name="repo_load_failed">Kan de repository niet laden van %1$s:\n%2$s</string>
 
-
-
-
-
-
-
-
-
+    <!-- Most of these belong to currently hidden features -->
 
 </resources>
