--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -26,6 +26,7 @@
     <string name="uninstall">Odinstaluj i przywróć systemowe procesy</string>
     <string name="soft_reboot">Tryb szybki</string>
     <string name="reboot">Tryb normalny</string>
+    <string name="reboot_recovery">Restart do trybu recovery</string>
     <string name="reboot_failed">Restartnie powiódł się. Proszę użyć normalnego trybu restartu.</string>
     <string name="auto_flash_note">%s należy załadować automatycznie po naciśnięciu OK.</string>
     <string name="reboot_confirmation">Chcesz teraz zrestartować telefon?</string>
@@ -36,6 +37,9 @@
     <string name="framework_active">Wersja %s Xposed framework jest aktywna.</string>
     <string name="framework_not_active">Wersja %s Xposed framework jest zainstalowana, ale nie jest aktywna. Proszę sprawdzić logi, aby poznać szczegóły.</string>
     <string name="framework_not_installed">Xposed framework jest niezainstalowany.</string>
+    <string name="status">Status Xposed</string>
+    <string name="xposed_on_next_reboot">Xposed Framework zostanie włączony po ponownym uruchoimieniu</string>
+    <string name="xposed_off_next_reboot">Xposed Framework zostanie wyłączony po ponownym uruchoimieniu</string>
 
     <!-- File operations -->
     <string name="root_failed">Nie udało się uzyskać dostępu do konta roota. Upewnij się, że urządzenie jest zrootowane prawidłowo i nie zostały zablokowane polecenia powłoki.</string>
@@ -114,6 +118,13 @@
     <string name="settings_theme_dark">Ciemny</string>
     <string name="settings_theme_black">Czarny (użyteczne dla ekranów AMOLED)</string>
     <string name="settings_default_view">Domyślny widok</string>
+    <string name="open_drawer_summ">Otwórz automatycznie szufladę nawigacji podczas uruchamiania</string>
+    <string name="open_drawer">Otwórz automatycznie szufladę nawigacji</string>
+    <string name="skip_xposedminversion_check">Pomiń sprawdzanie \'xposedminversion\'</string>
+    <string name="skip_xposedminversion_check_summ">Pomiń sprawdzanie modułów \'xposedminversion\'</string>
+    <string name="chrome_custom_tabs">Chrome Custom Tabs</string>
+    <string name="chrome_custom_tabs_summ">Otwieraj linki w wewnętrznej przeglądarce</string>
+    <string name="notify_module_update">Włącz powiadomienia o aktualizacji modułów</string>
 
     <!-- Support tab -->
     <string name="support_modules_label">Wsparcie dla modułów</string>
@@ -130,6 +141,8 @@
     <string name="logs_cleared">Logi wyczyszczone</string>
     <string name="logs_clear_failed">Nie można wyczyścić logu:</string>
     <string name="log_is_empty">Log jest pusty</string>
+    <string name="scroll_top">Przewiń do góry</string>
+    <string name="scroll_bottom">Przewiń do dołu</string>
 
     <!-- About tab -->
     <string name="about_developers_label">Moi deweloperzy</string>
@@ -161,6 +174,7 @@
     <string name="repo_download_failed">Pobieranie %1$s błędne: %2$s</string>
     <string name="repo_load_failed">Nie można załadować repozytorium z %1$s:\n%2$s</string>
 
+    <!-- Most of these belong to currently hidden features -->
     <string name="warning_installed_on_external_storage">Ten moduł nie może zostać załadowany, ponieważ jest zainstalowany na karcie SD, przenieś go do pamięci wewnętrznej.</string>
     <string name="view">PODGLĄD</string>
     <string name="export_">Eksport…</string>
@@ -172,13 +186,8 @@
     <string name="no_installed_modules">Brak zainstalowanych modułów!</string>
     <string name="no_backup_found">Nie znaleziono kopii zapasowej</string>
     <string name="no_enabled_modules">Brak aktywnych modułów</string>
-
     <string name="share">Udostępnij przez…</string>
     <string name="permissionNotGranted">Ta funkcja nie zadziała bez uprawnienia zapisu zewnętrznej pamięci masowej.</string>
-
-    <string name="notify_module_update">Włącz powiadomienia o aktualizacji modułów</string>
-
-    <string name="scroll_top">Przewiń do góry</string>
     <string name="add_bookmark">Dodaj zakładkę</string>
     <string name="remove_bookmark">Usuń zakładkę</string>
     <string name="bookmarks">Zakładki</string>
@@ -186,26 +195,10 @@
     <string name="bookmark_added">Dodano zakładkę</string>
     <string name="bookmark_removed">Usunięto zakładkę</string>
     <string name="undo">Cofnij</string>
-
     <string name="file_is_empty">Plik jest pusty</string>
-
     <string name="install_remove">Zainstaluj i usuń</string>
     <string name="download_remove">Pobierz i usuń</string>
     <string name="module_saved">Moduł zapisany %1$s</string>
-
-    <string name="reboot_recovery">Restart do trybu recovery</string>
     <string name="loading">Ładowanie…</string>
-    <string name="chrome_custom_tabs">Chrome Custom Tabs</string>
-    <string name="chrome_custom_tabs_summ">Otwieraj linki w wewnętrznej przeglądarce</string>
-    <string name="scroll_bottom">Przewiń do dołu</string>
-    <string name="open_drawer_summ">Otwórz automatycznie szufladę nawigacji podczas uruchamiania</string>
-    <string name="open_drawer">Otwórz automatycznie szufladę nawigacji</string>
-    <string name="status">Status Xposed</string>
-    <string name="xposed_on_next_reboot">Xposed Framework zostanie włączony po ponownym uruchoimieniu</string>
-    <string name="xposed_off_next_reboot">Xposed Framework zostanie wyłączony po ponownym uruchoimieniu</string>
-
-    <string name="skip_xposedminversion_check">Pomiń sprawdzanie \'xposedminversion\'</string>
-    <string name="skip_xposedminversion_check_summ">Pomiń sprawdzanie modułów \'xposedminversion\'</string>
-
 
 </resources>
