--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -141,13 +141,6 @@
     <string name="repo_download_failed">Tải xuống %1$s không thành công: %2$s</string>
     <string name="repo_load_failed">Không thể tải kho module từ %1$s:\n%2$s</string>
 
-
-
-
-
-
-
-
-
+    <!-- Most of these belong to currently hidden features -->
 
 </resources>
