--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -141,13 +141,6 @@
     <string name="repo_download_failed">Το κατέβασμα %1$s απέτυχε: %2$s</string>
     <string name="repo_load_failed">Αδυναμία φόρτωσης αποθετηρίου (repository) από %1$s:\n%2$s</string>
 
-
-
-
-
-
-
-
-
+    <!-- Most of these belong to currently hidden features -->
 
 </resources>
