--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -141,13 +141,6 @@
     <string name="repo_download_failed">Téléchargement %1$s échoué: %2$s</string>
     <string name="repo_load_failed">Impossible de charger le dépôt depuis %1$s:\n%2$s</string>
 
-
-
-
-
-
-
-
-
+    <!-- Most of these belong to currently hidden features -->
 
 </resources>
