--- a/app/src/main/res/values-id/strings.xml
+++ b/app/src/main/res/values-id/strings.xml
@@ -91,13 +91,6 @@
     <string name="repo_download_failed">Mengunduh %1$s gagal: %2$s</string>
     <string name="repo_load_failed">Tidak dapat menambil daftar dari %1$s:\n%2$s</string>
 
-
-
-
-
-
-
-
-
+    <!-- Most of these belong to currently hidden features -->
 
 </resources>
