--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -26,6 +26,7 @@
     <string name="uninstall">Rimuovi</string>
     <string name="soft_reboot">Riavvio soft</string>
     <string name="reboot">Riavvio</string>
+    <string name="reboot_recovery">Riavvia in recovery</string>
     <string name="reboot_failed">Riavvio fallito. Usa la funzione riavvia del dispositivo.</string>
     <string name="auto_flash_note">%s sarà flashato automaticamente una volta premuto "OK".</string>
     <string name="reboot_confirmation">Vuoi riavviare ora?</string>
@@ -36,6 +37,9 @@
     <string name="framework_active">La versione di Xposed Framework attiva è: %s.</string>
     <string name="framework_not_active">La versione di Xposed Framework installata è %s, ma non è attiva. Perfavore controlla i log per dettagli.</string>
     <string name="framework_not_installed">Xposed Framework non è installato.</string>
+    <string name="status">Stato Xposed</string>
+    <string name="xposed_on_next_reboot">Xposed Framework sarà abilitato al prossimo riavvio</string>
+    <string name="xposed_off_next_reboot">Xposed Framework sarà disabilitato al prossimo riavvio</string>
 
     <!-- File operations -->
     <string name="root_failed">Impossibile ottenere l\'accesso root.\n\nAssicurati di avere correttamente i permessi e di non aver bloccato comandi shell.</string>
@@ -115,6 +119,13 @@
     <string name="settings_theme_dark">Scuro</string>
     <string name="settings_theme_black">Nero (utile per schermi AMOLED)</string>
     <string name="settings_default_view">Vista di default</string>
+    <string name="open_drawer_summ">Apri automaticamente il menù laterale all\'avvio</string>
+    <string name="open_drawer">Apri automaticamente il menù laterale</string>
+    <string name="skip_xposedminversion_check">Salta controllo \'xposedminversion\' </string>
+    <string name="skip_xposedminversion_check_summ">Salta controllo \'xposedminversion\' per i moduli</string>
+    <string name="chrome_custom_tabs">Chrome Custom Tabs</string>
+    <string name="chrome_custom_tabs_summ">Apri link nel browser interno</string>
+    <string name="notify_module_update">Abilita notifica aggiornamenti dei moduli</string>
 
     <!-- Support tab -->
     <string name="support_modules_label">Supporto per i moduli</string>
@@ -131,6 +142,8 @@
     <string name="logs_cleared">Log svuotato con successo</string>
     <string name="logs_clear_failed">Impossibile svuotare il log:</string>
     <string name="log_is_empty">Il Log è vuoto</string>
+    <string name="scroll_top">Scorri su</string>
+    <string name="scroll_bottom">Scorri giù</string>
 
     <!-- About tab -->
     <string name="about_developers_label">Sviluppatori principali</string>
@@ -162,6 +175,7 @@
     <string name="repo_download_failed">Download di %1$s fallito: %2$s</string>
     <string name="repo_load_failed">Impossibile caricare repository da %1$s:\n%2$s</string>
 
+    <!-- Most of these belong to currently hidden features -->
     <string name="warning_installed_on_external_storage">Questo modulo non può essere caricato perché è installato nella memoria SD, per favore spostalo nella memoria interna</string>
     <string name="view">VEDI</string>
     <string name="export_">Esporta…</string>
@@ -173,13 +187,8 @@
     <string name="no_installed_modules">Non c\'è nessun modulo installato!</string>
     <string name="no_backup_found">Nessun backup trovato!</string>
     <string name="no_enabled_modules">Non c\'è nessun modulo abilitato!</string>
-
     <string name="share">Condividi con…</string>
     <string name="permissionNotGranted">Questa funzionalità non funzionerà senza il permesso di scrittura della memoria esterna.</string>
-
-    <string name="notify_module_update">Abilita notifica aggiornamenti dei moduli</string>
-
-    <string name="scroll_top">Scorri su</string>
     <string name="add_bookmark">Aggiungi segnalibro</string>
     <string name="remove_bookmark">Rimuovi segnalibro</string>
     <string name="bookmarks">Segnalibri</string>
@@ -187,27 +196,11 @@
     <string name="bookmark_added">Segnalibro aggiunto</string>
     <string name="bookmark_removed">Segnalibro rimosso</string>
     <string name="undo">Annulla</string>
-
     <string name="file_is_empty">Il file è vuoto</string>
-
     <string name="install_remove">Installa e rimuovi</string>
     <string name="download_remove">Scarica e rimuovi </string>
     <string name="module_saved">Modulo salvato in %1$s</string>
-
-    <string name="reboot_recovery">Riavvia in recovery</string>
     <string name="loading">Caricamento…</string>
-    <string name="chrome_custom_tabs">Chrome Custom Tabs</string>
-    <string name="chrome_custom_tabs_summ">Apri link nel browser interno</string>
-    <string name="scroll_bottom">Scorri giù</string>
-    <string name="open_drawer_summ">Apri automaticamente il menù laterale all\'avvio</string>
-    <string name="open_drawer">Apri automaticamente il menù laterale</string>
-    <string name="status">Stato Xposed</string>
-    <string name="xposed_on_next_reboot">Xposed Framework sarà abilitato al prossimo riavvio</string>
-    <string name="xposed_off_next_reboot">Xposed Framework sarà disabilitato al prossimo riavvio</string>
-
-    <string name="skip_xposedminversion_check">Salta controllo \'xposedminversion\' </string>
-    <string name="skip_xposedminversion_check_summ">Salta controllo \'xposedminversion\' per i moduli</string>
-
     <string name="save">Salva</string>
 
 </resources>
