--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -141,13 +141,6 @@
     <string name="repo_download_failed">ההורדה של %1$s נכשלה: %2$s</string>
     <string name="repo_load_failed">לא ניתן לטעון מאגר מיתוך %1$s:\n%2$s</string>
 
-
-
-
-
-
-
-
-
+    <!-- Most of these belong to currently hidden features -->
 
 </resources>
