--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -26,6 +26,7 @@
     <string name="uninstall">アンインストール</string>
     <string name="soft_reboot">ソフトリブート</string>
     <string name="reboot">再起動</string>
+    <string name="reboot_recovery">リカバリーで再起動</string>
     <string name="reboot_failed">再起動できませんでした。端末の通常の再起動の機能を使用してください。</string>
     <string name="auto_flash_note">%sは「OK」を押すと自動的にインストールされます。</string>
     <string name="reboot_confirmation">今すぐ再起動しますか？</string>
@@ -114,6 +115,9 @@
     <string name="settings_theme_dark">ダーク</string>
     <string name="settings_theme_black">ブラック（AMOLED向け）</string>
     <string name="settings_default_view">デフォルトのビュー</string>
+    <string name="chrome_custom_tabs">Chromeカスタムタブ</string>
+    <string name="chrome_custom_tabs_summ">リンクを内蔵ブラウザで開きます</string>
+    <string name="notify_module_update">モジュールの更新通知を有効化</string>
 
     <!-- Support tab -->
     <string name="support_modules_label">モジュールのサポート</string>
@@ -130,6 +134,7 @@
     <string name="logs_cleared">ログを消去しました。</string>
     <string name="logs_clear_failed">ログを消去できませんでした:</string>
     <string name="log_is_empty">ログはありません</string>
+    <string name="scroll_top">トップにスクロール</string>
 
     <!-- About tab -->
     <string name="about_developers_label">メイン開発者</string>
@@ -161,6 +166,7 @@
     <string name="repo_download_failed">%1$sがダウンロードできませんでした: %2$s</string>
     <string name="repo_load_failed">%1$sからレポジトリをロードできませんでした\n%2$s</string>
 
+    <!-- Most of these belong to currently hidden features -->
     <string name="warning_installed_on_external_storage">このモジュールはSDカードにインストールされているため、読み込めませんでした。内部ストレージに移動してください。</string>
     <string name="view">表示</string>
     <string name="export_">エクスポート</string>
@@ -172,13 +178,8 @@
     <string name="no_installed_modules">インストールされているモジュールがありません</string>
     <string name="no_backup_found">バックアップが見つかりません</string>
     <string name="no_enabled_modules">有効になっているモジュールがありません</string>
-
     <string name="share">共有方法</string>
     <string name="permissionNotGranted">この機能は外部ストレージへの書き込み権限がないと動作しません。</string>
-
-    <string name="notify_module_update">モジュールの更新通知を有効化</string>
-
-    <string name="scroll_top">トップにスクロール</string>
     <string name="add_bookmark">ブックマークを追加</string>
     <string name="remove_bookmark">ブックマークを削除</string>
     <string name="bookmarks">ブックマーク</string>
@@ -186,18 +187,10 @@
     <string name="bookmark_added">ブックマークを追加しました</string>
     <string name="bookmark_removed">ブックマークを削除しました</string>
     <string name="undo">元に戻す</string>
-
     <string name="file_is_empty">ファイルは空です</string>
-
     <string name="install_remove">インストールして削除</string>
     <string name="download_remove">ダウンロードして削除</string>
     <string name="module_saved">モジュールを%1$sに保存しました</string>
-
-    <string name="reboot_recovery">リカバリーで再起動</string>
     <string name="loading">読み込み中…</string>
-    <string name="chrome_custom_tabs">Chromeカスタムタブ</string>
-    <string name="chrome_custom_tabs_summ">リンクを内蔵ブラウザで開きます</string>
-
-
 
 </resources>
