--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -141,13 +141,6 @@
     <string name="repo_download_failed">Muat turun %1$s gagal: %2$s</string>
     <string name="repo_load_failed">Tidak boleh mengisi repositor daripada %1$s:\n%2$s</string>
 
-
-
-
-
-
-
-
-
+    <!-- Most of these belong to currently hidden features -->
 
 </resources>
