--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -141,13 +141,6 @@
     <string name="repo_download_failed">Descarcare %1$s esuata: %2$s</string>
     <string name="repo_load_failed">Nu se poate incarca repository-ul de la %1$s:\n%2$s</string>
 
-
-
-
-
-
-
-
-
+    <!-- Most of these belong to currently hidden features -->
 
 </resources>
