--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -116,13 +116,6 @@
     <string name="repo_download_failed">Učitano %1$s neuspešno: %2$s</string>
     <string name="repo_load_failed">Nemoguće učitati repozitorij iz %1$s:\n%2$s</string>
 
-
-
-
-
-
-
-
-
+    <!-- Most of these belong to currently hidden features -->
 
 </resources>
