--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -96,13 +96,6 @@
     <string name="repo_download_failed">Nerladdning av %1$s misslyckades: %2$s</string>
     <string name="repo_load_failed">Kan inte ladda datakatalog från %1$s:\n%2$s</string>
 
-
-
-
-
-
-
-
-
+    <!-- Most of these belong to currently hidden features -->
 
 </resources>
