--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -26,6 +26,7 @@
     <string name="uninstall">卸载</string>
     <string name="soft_reboot">软重启</string>
     <string name="reboot">重启设备</string>
+    <string name="reboot_recovery">重启设备至恢复模式</string>
     <string name="reboot_failed">重启设备失败。请使用设备的标准重启功能。</string>
     <string name="auto_flash_note">当你按下 OK 后，%s 将会被自动刷入设备。</string>
     <string name="reboot_confirmation">您现在要重启设备吗？</string>
@@ -110,6 +111,9 @@
     <string name="settings_theme_dark">暗色</string>
     <string name="settings_theme_black">黑色（对 AMOLED 屏幕有益）</string>
     <string name="settings_default_view">默认视图</string>
+    <string name="chrome_custom_tabs">Chrome 自定义标签</string>
+    <string name="chrome_custom_tabs_summ">在内置浏览器中打开链接</string>
+    <string name="notify_module_update">启用模块更新通知</string>
 
     <!-- Support tab -->
     <string name="support_modules_label">模块支持</string>
@@ -126,6 +130,7 @@
     <string name="logs_cleared">日志清理成功</string>
     <string name="logs_clear_failed">无法清理日志：</string>
     <string name="log_is_empty">日志为空</string>
+    <string name="scroll_top">滚动页面至顶部</string>
 
     <!-- About tab -->
     <string name="about_developers_label">主要开发者</string>
@@ -155,6 +160,7 @@
     <string name="repo_download_failed_http">下载 %1$s 失败：%2$d（%3$s）</string>
     <string name="repo_download_failed">下载 %1$s 失败：%2$s</string>
 
+    <!-- Most of these belong to currently hidden features -->
     <string name="warning_installed_on_external_storage">该模块不能载入，因为它安装在 SD 卡上，请将它移至内部存储。</string>
     <string name="view">视图</string>
     <string name="export_">导出…</string>
@@ -166,13 +172,8 @@
     <string name="no_installed_modules">未安装任何模块</string>
     <string name="no_backup_found">未找到备份</string>
     <string name="no_enabled_modules">未启用任何模块</string>
-
     <string name="share">分享</string>
     <string name="permissionNotGranted">没有写入外部存储权限该功能将不能工作。</string>
-
-    <string name="notify_module_update">启用模块更新通知</string>
-
-    <string name="scroll_top">滚动页面至顶部</string>
     <string name="add_bookmark">添加书签</string>
     <string name="remove_bookmark">移除书签</string>
     <string name="bookmarks">书签</string>
@@ -180,18 +181,10 @@
     <string name="bookmark_added">书签已添加</string>
     <string name="bookmark_removed">书签已移除</string>
     <string name="undo">撤销</string>
-
     <string name="file_is_empty">文件为空</string>
-
     <string name="install_remove">安装和移除</string>
     <string name="download_remove">下载和移除</string>
     <string name="module_saved">模块保存于 %1$s</string>
-
-    <string name="reboot_recovery">重启设备至恢复模式</string>
     <string name="loading">载入中…</string>
-    <string name="chrome_custom_tabs">Chrome 自定义标签</string>
-    <string name="chrome_custom_tabs_summ">在内置浏览器中打开链接</string>
-
-
 
 </resources>
